---------------------------------------------------------------------------------------------------
Version: 0.69.56
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.55
Date: 2025-06-07
  Changes:
    - Generalized event library to work with space platforms too.
    - Garbo grabbers now too heavy for a rocket, because why would you want them off of Rubia?
  Balancing:
    - Context: I just beat Rubia again, but on the newly added highest difficulty. I'm making a second pass of balance changes. They are mostly small tweaks that should not break anyone's base.
    - Buffs:
      ► Biorecycling Plant recipe time 10 => 6 (+66% speed)
      ► Crapapult craft time 8 => 7 (+14% speed)
      ► Wind turbine craft time 10 => 8 (+25% speed)
      ► Assisted frothing recipe time 10 => 8 (+25% speed). The current tuning should already be enough to promote people to make some nice designs.
      ► Assisted frothing: Light oil cost 30 => 25 (-17%). When voiding from Junkibacterial Metabolysis of blue chips, I want light oil to be the byproduct to manage.
      ► Cargo pod containers now take fixed damage from trashsteroids to avoid awkward explosions at high difficulties.
      ► Gleba-Rubia distance 15k km => 10k km. I always thought it was 10k until I looked again XD
      ► (Cerys) Plutonium earing tech cost 1000 => 300. It was just far too much.
      ► (Maraxsis) Craptonite lamp tech cost hydraulic science => maraxsis glass. This makes it less samey (and also cheaper). 
    - Nerfs: The goal isn't to weaken anything overpowered, but to incentivise you to make a greater variety of builds pop up across Rubia.