@@ -99,7 +99,7 @@ garbo-grabber=Collects __ITEM__craptonite-chunk__ from from __ENTITY__medium-tra
 crapapult=Yeet your problems out into the wind. Now you're part of the problem.
 biorecycling-plant=Biorecycling plant
 rubia-sniper-turret=Longer range ammo turret
-rci-rocketizer=Place adjacent to a [entity=rocket-silo]. Any items inserted into this will be transferred to the rocket's cargo (including materials used for rocket parts!).
+rci-rocketizer=Place adjacent to a [entity=rocket-silo]. Any items inserted into this will be transferred to the rocket's cargo. This allows materials used to make rocket parts (such as [item=craptonite-frame]) to be exported without [entity=logistic-robot].
 
 medium-trashsteroid=Garbage thrown by the wind at high velocity. Its health scales with your gun technology levels, but higher damage ranks are still quite beneficial for you. Trashsteroids have a small chance to land a critical hit.
 
