@@ -295,7 +295,7 @@ data:extend({
     prerequisites = {"planetslib-rubia-cargo-drops", "production-science-pack"},
     unit =
     {
-        count = 500,
+        count = 1000,
         ingredients =
         {
             { "automation-science-pack",      1 },
